css: Fix navbar-toggle color in dark mode
Fixes #9391

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -1349,9 +1349,6 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-toggle:focus {
   background-color: rgb(42, 46, 47);
 }
-.navbar-inverse .navbar-toggle .icon-bar {
-  background-color: rgb(26, 29, 30);
-}
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
   border-color: rgb(141, 131, 116);
